unpackaged/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Batch__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Batch</label>
        <referenceTo>Batch__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_id__c</fullName>
        <label>Email id</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_designation__c</fullName>
        <label>Employee designation</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees_date_of_joining__c</fullName>
        <label>Employees date of joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>name</fullName>
        <active>true</active>
        <description>name should not contain numbers</description>
        <errorConditionFormula>NOT( REGEX( Name , &quot;[a-z A-Z]+&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>name should not contain numbers symbols</errorMessage>
    </validationRules>
</CustomObject>